# BVH-Viewer

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
include/: Gui.hpp
include/GLSL/: ShaderGLSL.hpp  VBO.hpp
include/GLSL/export-data/: CameraShader.hpp  ExportCamera.hpp  ExportLight.hpp  ExportObject.hpp  ObjectShader.hpp
include/GLSL/export-data/export-camera/: ExportProjection.hpp  ExportVP.hpp  MVPExport.hpp
include/GLSL/export-data/export-light/: ExportAPD.hpp
include/GLSL/export-data/export-object/: ExportMMT.hpp
include/GLSL/utils/: EBO.hpp  ShaderGLSL.hpp  VAO.hpp  VBO.hpp
include/bvh/: BVH.hpp  MCBVH.hpp  MDBVH.hpp
include/camera/: Camera.hpp  CameraGLSL.hpp  CoordinateSystem.hpp  DataCamera.hpp  TypeCamera.hpp
include/camera/camera-types/: PinHole.hpp
include/light/: GlobalAmbient.hpp  LightGLSL.hpp  PointLight.hpp
include/material/: Color.hpp  Material.hpp
include/math/: Matrix4.hpp  Transforamation.hpp  Utils.hpp  Vector3.hpp  Vector4.hpp
include/objects/: GeometricObject.hpp  GeometricObjectGLSL.hpp  IShape.hpp  Mesh.hpp  ObjectLoader.hpp  Vertex.hpp
include/objects/shapes/: AABB.hpp  Cylinder.hpp  ModelLoader.hpp  Sphere.hpp  Torus.hpp
include/shader/: IShade.hpp  IShader.hpp  InjectIntoShader.hpp  ShaderGLSL.hpp
include/shader/GLSL/: EBO.hpp  ShaderGLSL.hpp  VAO.hpp  VBO.hpp
models/: horse.ply:Zone.Identifier  test.ply
src/: Gui.cpp  Shader.cpp  Shader.hpp  main.cpp
src/GLSL/: EBO.cpp  ShaderGLSL.cpp  VAO.cpp  VBO.cpp
src/GLSL/export-data/export-camera/: ExportProjection.cpp  ExportVP.cpp  MVPExport.cpp
src/GLSL/export-data/export-light/: ExportAPD.cpp
src/GLSL/export-data/export-object/: ExportMMT.cpp
src/GLSL/utils/: EBO.cpp  ShaderGLSL.cpp  VAO.cpp  VBO.cpp
src/bvh/: MCBVH.cpp  MDBVH.cpp
src/camera/: Camera.cpp  CameraGLSL.cpp  DataCamera.cpp  PinHole.cpp
src/glsl-files/: fragment.glsl  vertex.glsl
src/glsl-files/blin-phong/: blin-phong.frag  blin-phong.vert
src/glsl-files/debug/: debug.vert  fragment.glsl  normal.frag  normal.vert  vertex.glsl  wireframe.geom
src/glsl-files/gouraud/: fragment.glsl  gouraud.frag  gouraud.vert  vertex.glsl
src/glsl-files/test/: fragment.glsl  geometry.glsl  vertex.glsl  wireframe.glsl
src/glsl-files/toon/: toon.frag  toon.vert
src/light/: GlobalAmbient.cpp  LightGLSL.cpp  PointLight.cpp
src/material/: Material.cpp  color.cpp
src/math/: Matrix4.cpp  Transformation.cpp  Utils.cpp  Vector3.cpp  Vector4.cpp
src/objects/: GeometricObject.cpp  GeometricObjectGLSL.cpp  Mesh.cpp  ObjectLoader.cpp  Vertex.cpp
src/objects/shapes/: AABB.cpp  Cylinder.cpp  ModelLoader.cpp  Sphere.cpp  Torus.cpp
src/shader/: ShaderGLSL.cpp
src/shader/GLSL/: EBO.cpp  ShaderGLSL.cpp  VAO.cpp  VBO.cpp
